mejorado layout cartas para dispositivos pequeños

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <span class="id-partida-esperando" id="id-partida-esperando"></span>
         </div>
         <div id="mensaje" class="mensaje mensaje__verde">
+            <div class="cerrar-mensaje" onclick="vista.cerrarMensaje()">X</div>
             <span></span>
             <!--<form onsubmit="return controlador.volverAJugar()" class="invisible">
                 <button type="submit">Volver a jugar</button>
