--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Juego de cartas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat|Pacifico|Ubuntu|Press+Start+2P&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
         <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/carta.css">
